LU-18334 obdclass: wait for RCU completion

in lu_kmem_fini(), otherwise otherwise those RCU callbacks doing
kmem_cache_free() can race with kmem_cache_destroy():
kmem_cache_destroy echo_object_kmem: Slab cache still has objects
WARNING: CPU: 1 PID: 7991 at mm/slab_common.c:523 kmem_cache_destroy

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I21dfc034b9fc9368bf22d269d6986297a6812a5c
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56593
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Yang Sheng <ys@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>